fix - se arregló el anocho del carrousel y que el lado derecho quedaba muy pegado al scrollbar

--- a/assets/css/componentes/carrousel.css
+++ b/assets/css/componentes/carrousel.css
@@ -9,7 +9,7 @@
    padding: 1rem 0 2rem 1rem;
 }
 
-.carrousel article{
+.carrousel__item{
     flex-grow: 0;
      flex-shrink: 0;
      flex-basis: 70%;
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 600px) {
     
-    .carrousel article{
+    .carrousel__item{
         flex-grow: 0;
          flex-shrink: 0;
          flex-basis: 45%;
@@ -27,11 +27,11 @@
 
 @media screen and (min-width: 768px) {
     .carrousel{
-        width:100vw;
+        width:95%;
         margin-inline: auto;
         padding:1rem;
     }
-    .carrousel article{
+    .carrousel__item{
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: 32%;
